--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -19,49 +19,54 @@
     <!-----------------------   HEADER   -------------------->
     <!------------------------------------------------------->
     <header>
-        <header>
-            <a class="imgLogo">
-                <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
-            </a>
-        </header>
-        <div>
-            <nav class="navMenu">
-                <ul>
-                    <li>
-                        <a class="li_navMenu">PARTICIPANTES</a>
-                        <ul>
-                            <li><a href="/pagNuevoParticipante">Añadir nuevo participante</a></li>
-                            <li><a href="">Buscar participantes</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="" class="li_navMenu">UNIDAD FAMILIAR</a>
-                        <ul>
-                            <li><a href="">Buscar unidad familiar</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="" class="li_navMenu">AYUDA</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+
+        <a class="imgLogo">
+            <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
+        </a>
+
+
+        <nav class="navMenu">
+            <ul>
+                <li class="li_navMenu">
+                    <a href="#">PARTICIPANTES</a>
+                    <ul class="subMenu">
+                        <li><a href="/pagNuevoParticipante">Añadir nuevo participante</a></li>
+                        <li><a href="">Buscar participantes</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="li_navMenu">UNIDAD FAMILIAR</a>
+                    <ul>
+                        <li><a href="#">Buscar unidad familiar</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="li_navMenu">AYUDA</a>
+                </li>
+            </ul>
+        </nav>
+
         <div class="divPerfil">
             <div class="iconoGrande">
-                <img src="../imagenes/user-circle.svg" />
+                <img src="../imagenes/user-circle.svg"/>
             </div>
             <!--PARA SALIR DE LA APLICACION-->
-            <img class="iconoPeq" name="salir" src="../imagenes/logout.svg" />
+            <div class="iconoPeq">
+                <img name="salir" src="../imagenes/logout.svg" />
+            </div>
         </div>
+
+
+
     </header>
 
     <main>
 
     </main>
 
-    <footer>
+    <!-- <footer>
         © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
-    </footer>
+    </footer> -->
 
 </body>
 
