Formulario de salud concluido

--- a/public/views/nuevaSalud.html
+++ b/public/views/nuevaSalud.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="div_bloque">
-                    <label for="especificacionesGraves">Especificar cuestiones graves</label>
+                    <label id="textoCuestiones" for="especificacionesGraves">Especificar cuestiones graves</label>
                     <input class="inputTexto" type="text" id="especificacionesGraves" name="especificacionesGraves" placeholder=" Especificar las cuestiones graves de salud" />
                 </div>
                 <div class="div_bloque">
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="div_bloque">
-                    <label for="especificacionesDiscapacidad">Especificar discapacidad reconocida</label>
+                    <label id="textoEspecificaciones" for="especificacionesDiscapacidad">Especificar discapacidad reconocida</label>
                     <input class="inputTexto" type="text" id="especificacionesDiscapacidad" name="especificacionesDiscapacidad"
                         placeholder=" Especificar la discapacidad reconocida" />
                 </div>
@@ -65,6 +65,7 @@
                     <a class="btnes" href="/pagNuevaUnidadFamiliar">Anterior</a>
                     <a class="btnes" id="siguiente" href="/pagNuevaFormacion">Siguiente</a>
                 </div>
+                <p id="resultado"></p>
             </form>
         </section>
 
