continuacion estilo menu

--- a/public/css/estiloMenu.css
+++ b/public/css/estiloMenu.css
@@ -30,6 +30,12 @@ header {
 
 .navMenu ul>li {
     float: left;
+    
+}
+
+.ul_subMenu{
+    display: flex;
+    flex-direction: column;
 }
 
 ul li {
