--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -29,7 +29,8 @@
             <ul>
                 <li class="li_navMenu">
                     <a href="#">PARTICIPANTES</a>
-                    <ul class="subMenu">
+                    
+                    <ul class="ul_subMenu">
                         <li><a href="/pagNuevoParticipante">Añadir nuevo participante</a></li>
                         <li><a href="">Buscar participantes</a></li>
                     </ul>
