--- a/public/views/nuevaLaboral.html
+++ b/public/views/nuevaLaboral.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboral - Nuevo participante</title>
-    <script type="module" async src="./javaScript/index.js"></script>
+    <script type="module" async src="./javaScript/nuevaLaboral/index.js"></script>
     <link href="../css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,10 +31,10 @@
 
 
                 <div class="div_bloque">
-                    <label for="premisoTrabajo">¿Tiene permiso de trabajo?</label>
+                    <label for="permisoTrabajo">¿Tiene permiso de trabajo?</label>
                     <div class="divRadioButton">
-                        <input class="divRadioButton" type="radio" name="premisoTrabajo" value="0">Sí</input>
-                        <input class="divRadioButton" type="radio" name="premisoTrabajo" value="1" checked>No</input>
+                        <input class="divRadioButton" type="radio" name="permisoTrabajo" value="0">Sí</input>
+                        <input class="divRadioButton" type="radio" name="permisoTrabajo" value="1" checked>No</input>
                     </div>
                 </div>
                 <div class="div_bloque">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="div_bloque">
-                    <label for="situacionLaboral">Situación laboral actual (desempleo, empleo, estudiante...)</label>
+                    <label for="situacionLaboral">Situación laboral actual (desempleado, empleado, estudiante...)</label>
                     <input class="inputTexto" type="text" id="situacionLaboral" name="situacionLaboral"
                         placeholder=" Introduzca la situación laboral" required />
                 </div>
@@ -87,12 +87,11 @@
                     <button class="btnes" type="button" id="comprobar">Comprobar</button>
                     <input class="btnes" type="reset" id="borrar" value="Limpiar" />
                     <a class="btnes" href="/pagNuevaFormacion">Anterior</a>
-                    <a class="btnes" href="/pagNuevoHistorico">Siguiente</a>
-
+                    <a id="siguiente" class="btnes" href="/pagNuevoHistorico">Siguiente</a>
                 </div>
+                <p id="resultado"></p>
             </form>
         </section>
-
     </main>
 
 
