diseño paginas buscarParticipante y buscarUDFamiliar

--- a/public/views/buscarParticipante.html
+++ b/public/views/buscarParticipante.html
@@ -67,7 +67,7 @@
                 <div class="botones-form">
                     <a class="btnes" id="buscar" href="/pagBuscarParticipante">Buscar</a>
                     <input class="btnes" type="reset" id="borrar" value="Limpiar" />
-                    <a class="btnes" id="siguiente" href="/pagMenu">Volver</a>
+                    <a class="btnes" id="volver" href="/pagMenu">Volver</a>
                 </div>
         </section>
 
