--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -32,13 +32,13 @@
                     
                     <ul class="ul_subMenu">
                         <li><a href="/pagNuevoParticipante">Añadir nuevo participante</a></li>
-                        <li><a href="">Buscar participantes</a></li>
+                        <li><a href="/pagBuscarParticipante">Buscar participantes</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="li_navMenu">UNIDAD FAMILIAR</a>
                     <ul>
-                        <li><a href="#">Buscar unidad familiar</a></li>
+                        <li><a href="/pagBuscarUDFamiliar">Buscar unidad familiar</a></li>
                     </ul>
                 </li>
                 <li>
