--- a/public/views/nuevoHistorico.html
+++ b/public/views/nuevoHistorico.html
@@ -36,7 +36,7 @@
                     <button class="btnes" type="button" id="comprobar">Comprobar</button>
                     <input class="btnes" type="reset" id="borrar" value="Limpiar" />
                     <input class="btnes" type="submit" value="Guardar" />
-                    <a class="btnes"href="/pagUnidadFamiliar">Anterior</a>
+                    <a class="btnes"href="/pagNuevaLaboral">Anterior</a>
                 </div>
             </form>
         </section>
